# pipes-platform

./: .gitignore  .gitmodules  .travis.yml  README.md  pipes-ecosystem.cabal  pipes-platform.cabal  sources.txt
docs/: notes.org
examples/: emitter.hs
test/: test-network.hs
