name:                     pipes-platform
version:                  0.1
synopsis:                 pipes library suite
License:                  BSD3
License-File:             LICENSE
Copyright:                2013 Gabriel Gonzalez
Author:                   Gabriel Gonzalez
Maintainer:               Gabriel439@gmail.com
Bug-Reports:              https://github.com/Gabriel439/pipes-platform/issues
category:                 Test
build-type:               Simple
stability:                Experimental
cabal-version:            >= 1.10
extra-source-files:       Readme.md
description:              Just a sandpit
source-repository         head
  type:                   git
  location:               git://github.com/Gabriel439/pipes-platform.git